# easyofd

./: pyproject.toml  requirements.txt  setup.py.bak
easyofd/draw/: draw_pdf.py
easyofd/parser_ofd/: file_annotation_parser.py  ofd_parser.py
test/: demo.py
